...
            android:id="@+id/userImageNavHeader"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="12dp"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            app:layout_constraintBottom_toTopOf="@+id/loginBtnNavHeader"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/profiledefault" />

    <TextView
            android:id="@+id/userNameNavHeader"
            android:layout_width="wrap_content"
...
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="4dp"
            android:background="@android:color/transparent"
            android:onClick="loginBtnNavClicked"
            android:text="Login"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
            android:id="@+id/addChannelBtn"
...
